@@ -16,6 +16,7 @@ xine-ui (0.99.5) unstable; urgency=low
     [bugs #1395139, #1393589], other portability fixes
   * fixed X_CreateGlyphCursor crash [bugs #1092498, #1235983]
   * fixed support for Xservers with shared images but without shared pixmaps (Xgl)
+  * fixed aspect ratio in snapshot function
 
 xine-ui (0.99.4) unstable; urgency=low
 
